fist card created with a card.css file included with it in the same folder. you can check if you want to see the code as the responsiveness is not completed yet

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -9,8 +9,9 @@
 .listed li {
   margin-left: 1.5rem;
 }
-.active{
+.active {
   border-bottom: 2px solid #fff;
+  padding-bottom: 0.2rem;
 }
 @media screen and (width > 768px) {
   .storyAnimate {
