carousel added to the mainsection components

--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -10,3 +10,13 @@
   justify-content: center;
   row-gap: 3rem;
 }
+
+.cardIcons {
+  padding-top: 1rem;
+}
+.slide{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  
+}
