mobile navigation added

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -63,12 +63,48 @@
 }
 @media screen and (width < 768px) {
   .hamburger {
-    display: none;
+    display: block;
   }
   .navigation {
     display: none;
   }
   #blur-back {
     justify-content: space-between;
+  }
+  .storyAnimate {
+    background: url("../../assets/proxy.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    background-position: center;
+    height: 75vh;
+    transition: 5s;
+    animation-name: animateBg;
+    animation-duration: alternate-reverse;
+    animation-duration: 30s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-play-state: running;
+    animation-timing-function: ease-in-out;
+  }
+  @keyframes animateBg {
+    0% {
+      background-image: url("../../assets/proxy2.jpeg");
+    }
+    20% {
+      background-image: url("../../assets/proxy3.jpeg");
+    }
+    40% {
+      background-image: url("../../assets/proxy4.jpeg");
+    }
+    60% {
+      background-image: url("../../assets/proxy5.jpeg");
+    }
+    80% {
+      background-image: url("../../assets/proxy2.jpeg");
+    }
+    100% {
+      background-image: url("../../assets/proxy.jpeg");
+    }
   }
 }
