--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -18,12 +18,19 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  /* place-content: center;
-  align-items: center; */
   gap: 4rem;
 }
 .cardDiv {
   padding: 0.2rem;
-  
 }
 
+.polygon {
+  clip-path: polygon(
+    99.75% 0%,
+    100% 100%,
+    16.5% 100%,
+    0% 90.25%,
+    0% 0%,
+    73.5% 0%
+  );
+}
