--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -5,6 +5,7 @@
   -webkit-backdrop-filter: blur(4px);
   position: fixed;
   min-width: 100%;
+  z-index: 1000;
 }
 
 .listed li {
@@ -59,6 +60,9 @@
   }
   .navigation {
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 2rem;
   }
 }
 @media screen and (width < 768px) {
